k8s/staging/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: glossary
  namespace: glossary-staging
spec:
  selector:
    app: glossary
  ports:
    - name: http
      port: 80
      targetPort: 8000
